--- a/toolkit/components/passwordmgr/test/mochitest/test_password_length.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_password_length.html
@@ -31,12 +31,14 @@ async function loadFormIntoIframe(origin, html) {
   });
   loginFrame.src = origin + "/tests/toolkit/components/passwordmgr/test/mochitest/blank.html";
   await loadedPromise;
-  let frameDoc = SpecialPowers.wrap(loginFrame.contentWindow).document;
-  // eslint-disable-next-line no-unsanitized/property
-  frameDoc.documentElement.innerHTML = html;
+
+  await SpecialPowers.spawn(getIframeBrowsingContext(window, 0), [html], function(contentHtml) {
+    // eslint-disable-next-line no-unsanitized/property
+    this.content.document.documentElement.innerHTML = contentHtml;
+  });
+  
   // Wait for the form to be processed before trying to submit.
   await promiseFormsProcessed();
-  return frameDoc;
 }
 
 add_task(async function setup() {
@@ -93,20 +95,25 @@ function getSubmitMessage() {
 add_task(async function test_password_lengths() {
   for (let tc of TESTCASES) {
     info("Starting testcase: " + tc.testName + ", " + JSON.stringify([tc.pword1, tc.pword2]));
-    let frameDoc = await loadFormIntoIframe(DEFAULT_ORIGIN, `<form id="form1" onsubmit="return false;">
+    await loadFormIntoIframe(DEFAULT_ORIGIN, `<form id="form1" onsubmit="return false;">
       <input  type="text"       name="uname" value="myname">
       <input  type="password"   name="pword1" value="">
       <input  type="password"   name="pword2" value="">
       <button type="submit" id="submitBtn">Submit</button>
     </form>`);
 
-    is(frameDoc.querySelector("[name='uname']").value, "myname", "Checking for filled username");
-    frameDoc.querySelector("[name='pword1']").setUserInput(tc.pword1);
-    frameDoc.querySelector("[name='pword2']").setUserInput(tc.pword2);
+    await SpecialPowers.spawn(getIframeBrowsingContext(window, 0), [tc], function(testcase) {
+      let doc = this.content.document;
+      Assert.equal(doc.querySelector("[name='uname']").value, "myname", "Checking for filled username");
+      doc.querySelector("[name='pword1']").setUserInput(testcase.pword1);
+      doc.querySelector("[name='pword2']").setUserInput(testcase.pword2);
+    });
 
     // Check data sent via PasswordManager:onFormSubmit
     let processedPromise = getSubmitMessage();
-    frameDoc.getElementById("submitBtn").click();
+    await SpecialPowers.spawn(getIframeBrowsingContext(window, 0), [], function() {
+      this.content.document.getElementById("submitBtn").click();
+    });
 
     let submittedResult = await processedPromise;
     info("Got submittedResult: " + JSON.stringify(submittedResult));
