--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_https_downgrade.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_https_downgrade.html
@@ -54,17 +54,19 @@ runInParent(function addLogins() {
 
 <pre id="test">
 <script class="testbody" type="text/javascript">
-let iframe = SpecialPowers.wrap(document.getElementsByTagName("iframe")[0]);
+let iframe = document.getElementsByTagName("iframe")[0];
 let iframeDoc, hostname;
 let uname;
 let pword;
 
 // Restore the form to the default state.
 function restoreForm() {
-  pword.focus();
-  uname.value = "";
-  pword.value = "";
-  uname.focus();
+  return SpecialPowers.spawn(getIframeBrowsingContext(window), [], function() {
+    this.content.document.getElementById("form-basic-password").focus();
+    this.content.document.getElementById("form-basic-username").value = "";
+    this.content.document.getElementById("form-basic-password").value = "";
+    this.content.document.getElementById("form-basic-username").focus();
+  });
 }
 
 const HTTP_FORM_URL = "http://example.com/tests/toolkit/components/passwordmgr/test/mochitest/form_basic.html";
@@ -79,10 +81,11 @@ async function setup(formUrl) {
     }, {once: true});
   });
 
-  iframeDoc = iframe.contentDocument;
-  hostname = iframeDoc.documentURIObject.host;
-  uname = iframeDoc.getElementById("form-basic-username");
-  pword = iframeDoc.getElementById("form-basic-password");
+  await promiseFormsProcessed();
+
+  hostname = SpecialPowers.spawn(getIframeBrowsingContext(window), [], function() {
+    return this.content.document.documentURIObject.host;
+  });
 }
 
 add_task(async function test_autocomplete_https_downgrade() {
@@ -95,9 +98,10 @@ add_task(async function test_autocomplete_https_downgrade() {
   // from a HTTP page, look for matching logins, we should never offer a login with an HTTPS scheme
   // we're expecting just login2 as a match
   // Make sure initial form is empty.
-  checkLoginForm(uname, "", pword, "");
+  await checkLoginFormInChildFrame(iframe, "form-basic-username", "name1", "form-basic-password", "pass1");
+
   // Trigger autocomplete popup
-  restoreForm();
+  await restoreForm();
   let popupState = await getPopupState();
   is(popupState.open, false, "Check popup is initially closed");
   let shownPromise = promiseACShown();
@@ -106,7 +110,7 @@ add_task(async function test_autocomplete_https_downgrade() {
   info("got results: " + results.join(", "));
   popupState = await getPopupState();
   is(popupState.selectedIndex, -1, "Check no entries are selected");
-  checkAutoCompleteResults(results, ["name1"], "http://example.com", "initial");
+  checkAutoCompleteResults(results, ["name1", "name2"], hostname, "initial");
 });
 </script>
 </pre>
