--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_https_upgrade.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_https_upgrade.html
@@ -54,17 +54,17 @@ runInParent(function addLogins() {
 
 <pre id="test">
 <script class="testbody" type="text/javascript">
-let iframe = SpecialPowers.wrap(document.getElementsByTagName("iframe")[0]);
+let iframe = document.getElementsByTagName("iframe")[0];
 let iframeDoc, hostname;
-let uname;
-let pword;
 
 // Restore the form to the default state.
 function restoreForm() {
-  pword.focus();
-  uname.value = "";
-  pword.value = "";
-  uname.focus();
+  return SpecialPowers.spawn(getIframeBrowsingContext(window), [], function() {
+    this.content.document.getElementById("form-basic-password").focus();
+    this.content.document.getElementById("form-basic-username").value = "";
+    this.content.document.getElementById("form-basic-password").value = "";
+    this.content.document.getElementById("form-basic-username").focus();
+  });
 }
 
 const HTTPS_FORM_URL = "https://example.com/tests/toolkit/components/passwordmgr/test/mochitest/form_basic.html";
@@ -79,10 +79,11 @@ async function setup(formUrl = HTTPS_FORM_URL) {
     }, {once: true});
   });
 
-  iframeDoc = iframe.contentDocument;
-  hostname = iframeDoc.documentURIObject.host;
-  uname = iframeDoc.getElementById("form-basic-username");
-  pword = iframeDoc.getElementById("form-basic-password");
+  await promiseFormsProcessed();
+
+  hostname = SpecialPowers.spawn(getIframeBrowsingContext(window), [], function() {
+    return this.content.document.documentURIObject.host;
+  });
 }
 
 add_task(async function setup_https_frame() {
@@ -91,9 +92,9 @@ add_task(async function setup_https_frame() {
 
 add_task(async function test_empty_first_entry() {
   // Make sure initial form is empty.
-  checkLoginForm(uname, "", pword, "");
+  checkLoginFormInChildFrame(getIframeBrowsingContext(window, 0), "form-basic-username", "", "form-basic-password", "");
   // Trigger autocomplete popup
-  restoreForm();
+  await restoreForm();
   let popupState = await getPopupState();
   is(popupState.open, false, "Check popup is initially closed");
   let shownPromise = promiseACShown();
@@ -107,14 +108,14 @@ add_task(async function test_empty_first_entry() {
   let index0Promise = notifySelectedIndex(0);
   synthesizeKey("KEY_ArrowDown");
   await index0Promise;
-  checkLoginForm(uname, "", pword, ""); // value shouldn't update
+  await checkLoginFormInChildFrame(getIframeBrowsingContext(window, 0), "form-basic-username", "", "form-basic-password", ""); // value shouldn't update
   synthesizeKey("KEY_Enter");
   await promiseFormsProcessed();
-  checkLoginForm(uname, "name", pword, "pass");
+  await checkLoginFormInChildFrame(getIframeBrowsingContext(window, 0), "form-basic-username", "name", "form-basic-password", "pass");
 });
 
 add_task(async function test_empty_second_entry() {
-  restoreForm();
+  await restoreForm();
   let shownPromise = promiseACShown();
   synthesizeKey("KEY_ArrowDown"); // open
   await shownPromise;
@@ -122,16 +123,21 @@ add_task(async function test_empty_second_entry() {
   synthesizeKey("KEY_ArrowDown"); // second
   synthesizeKey("KEY_Enter");
   await promiseFormsProcessed();
-  checkLoginForm(uname, "name1", pword, "pass1");
+  await checkLoginFormInChildFrame(getIframeBrowsingContext(window, 0), "form-basic-username", "name1", "form-basic-password", "pass1");
 });
 
 add_task(async function test_search() {
-  restoreForm();
+  await restoreForm();
   let shownPromise = promiseACShown();
+
   // We need to blur for the autocomplete controller to notice the forced value below.
-  uname.blur();
-  uname.value = "name";
-  uname.focus();
+  await SpecialPowers.spawn(getIframeBrowsingContext(window), [], function() {
+    let uname = this.content.document.getElementById("form-basic-username");
+    uname.blur();
+    uname.value = "name";
+    uname.focus();
+  });
+
   sendChar("1");
   synthesizeKey("KEY_ArrowDown"); // open
   let results = await shownPromise;
@@ -139,15 +145,14 @@ add_task(async function test_search() {
   synthesizeKey("KEY_ArrowDown"); // first
   synthesizeKey("KEY_Enter");
   await promiseFormsProcessed();
-  checkLoginForm(uname, "name1", pword, "pass1");
+  await checkLoginFormInChildFrame(getIframeBrowsingContext(window, 0), "form-basic-username", "name1", "form-basic-password", "pass1");
 
   let popupState = await getPopupState();
   is(popupState.open, false, "Check popup is now closed");
 });
 
 add_task(async function test_delete_first_entry() {
-  restoreForm();
-  uname.focus();
+  await restoreForm();
   let shownPromise = promiseACShown();
   synthesizeKey("KEY_ArrowDown");
   await shownPromise;
@@ -161,7 +166,7 @@ add_task(async function test_delete_first_entry() {
   // On Win/Linux, shift-backspace does not work, delete and shift-delete do.
   synthesizeKey("KEY_Delete", {shiftKey: true});
   await deletionPromise;
-  checkLoginForm(uname, "", pword, "");
+  await checkLoginFormInChildFrame(getIframeBrowsingContext(window, 0), "form-basic-username", "", "form-basic-password", "");
 
   let results = await notifyMenuChanged(3, "name1");
 
@@ -174,8 +179,7 @@ add_task(async function test_delete_first_entry() {
 });
 
 add_task(async function test_delete_duplicate_entry() {
-  restoreForm();
-  uname.focus();
+  await restoreForm();
   let shownPromise = promiseACShown();
   synthesizeKey("KEY_ArrowDown");
   await shownPromise;
@@ -189,7 +193,7 @@ add_task(async function test_delete_duplicate_entry() {
   // On Win/Linux, shift-backspace does not work, delete and shift-delete do.
   synthesizeKey("KEY_Delete", {shiftKey: true});
   await deletionPromise;
-  checkLoginForm(uname, "", pword, "");
+  await checkLoginFormInChildFrame(getIframeBrowsingContext(window, 0), "form-basic-username", "", "form-basic-password", "");
 
   is(await LoginManager.countLogins("http://example.com", "http://example.com", null), 1,
      "Check that the HTTP login remains");
