Bug 1589836 - Add permanent search icon in front of the megabar. r=adw
Differential Revision: https://phabricator.services.mozilla.com/D49826

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -6,6 +6,8 @@
 %include addons/extension-controlled.inc.css
 
 %filter substitution
+%define identityBoxPaddingInline 6px
+%define identityBoxMarginInlineEnd 2px
 %define themeTransition background-color 0.1s cubic-bezier(.17,.67,.83,.67)
 %define lwtPopupBrighttextLinkColor #45a1ff
 
