Backed out changeset 01007f3333ea (bug 1584283) for Browser-chrome failures in widget/tests/browser/browser_test_procinfo.js

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -541,8 +541,8 @@ dialog:root /* override :root from above */ {
 
 /********** wizard **********/
 
-wizard {
-  -moz-box-flex: 1;
+wizard,
+wizard:root /* override :root from above */ {
   -moz-box-orient: vertical;
   width: 40em;
   height: 30em;
