--- a/browser/components/firefoxview/firefoxview-next.css
+++ b/browser/components/firefoxview/firefoxview-next.css
@@ -61,8 +61,8 @@ body {
 
 #pages {
   overflow-y: auto;
-  height: 100vh;
-  width: 100%;
+  max-height: 100vh;
+  max-width: 100%;
 }
 
 .main-container {
@@ -73,7 +73,7 @@ body {
 }
 
 @media (min-width: 120rem) {
-  #pages {
+  .main-container {
     margin-inline-start: 148px;
   }
 }
@@ -145,6 +145,10 @@ panel-item::part(button):hover {
 
 panel-item::part(button):hover:active {
   background-color: var(--fxview-element-background-active);
+}
+
+fxview-category-navigation {
+  overflow-y: auto;
 }
 
 fxview-category-navigation h1 {
