Bug 1841097 - Implement a checkbox in ETP Custom subpanel for the configuration of the fingerprinting protection. r=anti-tracking-reviewers,fluent-reviewers,flod,bvandersloot,mstriemer
This patch implements a checkbox in ETP Custom usbpanel. It's for the
configuration of the fingerprinting protection. Similar to the tracking
protection checkbox, it has a dropdown list to select which window to
enable the protection, private windows or all windows.

In addition, we update the existing copy for fingerprinters to reflect
the newly added fingerprinting protectoin checkbox.

Differential Revision: https://phabricator.services.mozilla.com/D186023

--- a/browser/components/preferences/privacy.inc.xhtml
+++ b/browser/components/preferences/privacy.inc.xhtml
@@ -294,9 +294,23 @@
                   <checkbox id="contentBlockingFingerprintersCheckbox"
                             class="content-blocking-checkbox" flex="1"
                             preference="privacy.trackingprotection.fingerprinting.enabled"
-                            data-l10n-id="content-blocking-fingerprinters-label"
+                            data-l10n-id="content-blocking-known-fingerprinters-label"
                             aria-describedby="contentBlockingCustomDesc"/>
                 </hbox>
+                <hbox class="custom-option">
+                    <checkbox id="contentBlockingFingerprintingProtectionCheckbox"
+                              class="content-blocking-checkbox" flex="1"
+                              data-l10n-id="content-blocking-suspected-fingerprinters-label"
+                              aria-describedby="contentBlockingCustomDesc"/>
+                    <vbox>
+                      <menulist id="fingerprintingProtectionMenu">
+                        <menupopup>
+                          <menuitem data-l10n-id="content-blocking-option-private" value="private"/>
+                          <menuitem data-l10n-id="content-blocking-tracking-protection-option-all-windows" value="always"/>
+                        </menupopup>
+                      </menulist>
+                    </vbox>
+                  </hbox>
               <html:div class="content-blocking-warning info-box-container reload-tabs" hidden="true">
                 <html:div class="content-blocking-reload-desc-container">
                   <html:div class="info-icon-container">
