--- a/layout/reftests/bugs/424236-5-ref.html
+++ b/layout/reftests/bugs/424236-5-ref.html
@@ -8,6 +8,7 @@
 	<style type="text/css">
 
 	* { -moz-outline-offset: -2px; outline-offset: -2px; }
+	body > span { outline: 1px dotted black; }
 	/* can't compare to border combined with negative margin because of
 	   margin collapsing */
 	body > div { display: block; outline: 1px dotted black; width: 15em; }
@@ -16,7 +17,7 @@
 </head>
 <body>
 
-<div>text<br>text<br>text</div>
+<span></span><div>text<br>text<br>text</div>
 
 </body>
 </html>
