Backed out 4 changesets (bug 1849301) for causing failures on browser_computed_matched-selectors_01.js. CLOSED TREE
Backed out changeset 9f2a5b983a7a (bug 1849301)
Backed out changeset e5181454f4c3 (bug 1849301)
Backed out changeset 71266152b915 (bug 1849301)
Backed out changeset e96c371d51ac (bug 1849301)

--- a/devtools/client/themes/computed.css
+++ b/devtools/client/themes/computed.css
@@ -73,12 +73,12 @@
   user-select: text;
   overflow-y: auto;
   overflow-x: hidden;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  flex: auto;
+  border-top: 1px solid var(--theme-splitter-color);
+  margin-top: -1px;
 }
 
-#computed-property-container > :nth-child(2n of .computed-property-view) {
+.row-striped {
   background: var(--row-striped-background);
 }
 
@@ -136,17 +136,8 @@
   outline: 0 !important;
 }
 
-.matchedselectors {
-  width: 100%;
-  padding-inline-start: 12px;
-
-  /*
-   * Matched selectors element is always created, but is empty until the arrow is expanded.
-   * We only want the margin to appear when the matched selectors are visible.
-   */
-  &:not(:empty) {
-    margin-block-start: 4px;
-  }
+.computed-property-content {
+  padding-inline-start: 17px;
 }
 
 /* Bug 1360238 - getSelection displays an extra "\n" on multiple sibling block elements.
