--- a/browser/components/firefoxview/firefoxview.html
+++ b/browser/components/firefoxview/firefoxview.html
@@ -49,6 +49,7 @@
   <body>
     <div id="logo-container" class="content-container">
       <div class="brand-logo">
+        <span class="brand-icon"></span>
         <span
           class="brand-feature-name"
           data-l10n-id="firefoxview-page-title"
