Backed out changeset f14569b8319b (bug 1850342) for causing dt failures on browser_rules_inactive_css_visited.js. CLOSED TREE

--- a/layout/style/test/test_selectors.html
+++ b/layout/style/test/test_selectors.html
@@ -1309,6 +1309,7 @@ function runTests() {
     }
 
     test_parseable(":-moz-broken");
+    test_parseable(":-moz-loading");
 
     run_deferred_tests();
 }
