Bug 1845148 - Use moz-message-bar for global warnings in about:addons. r=hjones,fluent-reviewers,extension-reviewers,flod,rpl
Differential Revision: https://phabricator.services.mozilla.com/D186380

--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -168,7 +168,7 @@ search-addons > search-textbox {
 
 /* Plugins aren't yet disabled by safemode (bug 342333),
    so don't show that warning when viewing plugins. */
-#page-header[current-param="plugin"] message-bar[warning-type="safe-mode"] {
+#page-header[current-param="plugin"] moz-message-bar[warning-type="safe-mode"] {
   display: none;
 }
 
