Bug 1850342 - Do not expose :-moz-broken to content. r=boris
This is not standard, and we don't use it internally (some chrome
stylesheets use it tho).

In the past this pseudo-class was more useful because it matched the
state for which <img> elements used an inline, but that's no longer
true, see bug 1196668 and co.

Depends on D186938

Differential Revision: https://phabricator.services.mozilla.com/D186939

--- a/layout/style/test/test_selectors.html
+++ b/layout/style/test/test_selectors.html
@@ -1078,6 +1078,7 @@ function runTests() {
 
     // Test chrome-only -moz-lwtheme
     test_balanced_unparseable(":-moz-lwtheme");
+    test_balanced_unparseable(":-moz-broken");
 
     test_balanced_unparseable(":-moz-tree-row(selected)");
     test_balanced_unparseable("::-moz-tree-row(selected)");
@@ -1307,8 +1308,6 @@ function runTests() {
       test_parseable(selector);
       should_serialize_to(selector, expected_serialization_when_parseable);
     }
-
-    test_parseable(":-moz-broken");
 
     run_deferred_tests();
 }
