--- a/browser/themes/shared/urlbarView.css
+++ b/browser/themes/shared/urlbarView.css
@@ -229,11 +229,11 @@
   mask-image: linear-gradient(to left, transparent, black 2em);
 }
 
-.urlbarView-overflowable[overflow]:not(.urlbarView-title[isurl]):-moz-locale-dir(rtl) {
+.urlbarView-overflowable[overflow]:not(.urlbarView-title[is-url]):-moz-locale-dir(rtl) {
   mask-image: linear-gradient(to right, transparent, black 2em);
 }
 
-.urlbarView-title[isurl]:-moz-locale-dir(rtl),
+.urlbarView-title[is-url]:-moz-locale-dir(rtl),
 .urlbarView-url:-moz-locale-dir(rtl) {
   direction: ltr !important;
 }
